--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@ radar_visualization({
       {
         quadrant: 2,
         ring: 1,
-        label: "Pyhton",
+        label: "Python",
         active: false,
         moved: 1
       },
@@ -383,13 +383,6 @@ radar_visualization({
         quadrant: 3,
         ring: 1,
         label: "Vagrant",
-        active: false,
-        moved: 0
-      },
-      {
-        quadrant: 3,
-        ring: 1,
-        label: "Artifactory",
         active: false,
         moved: 0
       },
