--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ radar_visualization({
       {
         quadrant: 2,
         ring: 0,
-        label: "NodeJS",
+        label: "Node.js",
         active: false,
         moved: 0
       },
@@ -150,7 +150,7 @@ radar_visualization({
       {
         quadrant: 2,
         ring: 0,
-        label: "Typescript",
+        label: "TypeScript",
         active: false,
         moved: 0
       },
@@ -164,7 +164,7 @@ radar_visualization({
       {
         quadrant: 2,
         ring: 1,
-        label: "Clojurescript",
+        label: "ClojureScript",
         active: false,
         moved: 0
       },
@@ -206,7 +206,7 @@ radar_visualization({
       {
         quadrant: 2,
         ring: 2,
-        label: "Flowtype",
+        label: "Flow",
         active: false,
         moved: 0
       },
@@ -298,7 +298,7 @@ radar_visualization({
       {
         quadrant: 3,
         ring: 0,
-        label: "Gitlab (CI)",
+        label: "GitLab",
         active: false,
         moved: 0
       },
@@ -396,7 +396,7 @@ radar_visualization({
       {
         quadrant: 3,
         ring: 1,
-        label: "Github",
+        label: "GitHub",
         active: false,
         moved: 0
       },
@@ -838,7 +838,7 @@ radar_visualization({
       {
         quadrant: 1,
         ring: 1,
-        label: "Upcloud",
+        label: "UpCloud",
         active: false,
         moved: 0
       },
@@ -880,7 +880,7 @@ radar_visualization({
       {
         quadrant: 1,
         ring: 1,
-        label: "Wordpress",
+        label: "WordPress",
         active: false,
         moved: 0
       },
