Fix JavaScript typo

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ radar_visualization({
       {
         quadrant: 2,
         ring: 0,
-        label: "Javascript",
+        label: "JavaScript",
         active: false,
         moved: 0
       },
