--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@ radar_visualization({
       {
         quadrant: 2,
         ring: 0,
-        label: "NodeJS",
-        bubble: "NodeJS",
+        label: "Node.js",
+        bubble: "Node.js",
         active: false,
         moved: 0
       },
@@ -154,8 +154,8 @@ radar_visualization({
       {
         quadrant: 2,
         ring: 0,
-        label: "Typescript",
-        bubble: "Typescript",
+        label: "TypeScript",
+        bubble: "TypeScript",
         active: false,
         moved: 0
       },
@@ -170,8 +170,8 @@ radar_visualization({
       {
         quadrant: 2,
         ring: 1,
-        label: "Clojurescript",
-        bubble: "Clojurescript",
+        label: "ClojureScript",
+        bubble: "ClojureScript",
         active: false,
         moved: 0
       },
@@ -218,8 +218,8 @@ radar_visualization({
       {
         quadrant: 2,
         ring: 2,
-        label: "Flowtype",
-        bubble: "Flowtype",
+        label: "Flow",
+        bubble: "Flow",
         active: false,
         moved: 0
       },
@@ -331,8 +331,8 @@ radar_visualization({
       {
         quadrant: 3,
         ring: 0,
-        label: "Gitlab (CI)",
-        bubble: "Gitlab (CI)",
+        label: "GitLab",
+        bubble: "GitLab",
         active: false,
         moved: 0
       },
@@ -443,8 +443,8 @@ radar_visualization({
       {
         quadrant: 3,
         ring: 1,
-        label: "Github",
-        bubble: "Github",
+        label: "GitHub",
+        bubble: "GitHub",
         active: false,
         moved: 0
       },
@@ -579,8 +579,8 @@ radar_visualization({
       {
         quadrant: 3,
         ring: 3,
-        label: "Teamcity",
-        bubble: "Teamcity",
+        label: "TeamCity",
+        bubble: "TeamCity",
         active: false,
         moved: 1
       },
@@ -980,8 +980,8 @@ radar_visualization({
       {
         quadrant: 1,
         ring: 1,
-        label: "Upcloud",
-        bubble: "Upcloud",
+        label: "UpCloud",
+        bubble: "UpCloud",
         active: false,
         moved: 0
       },
@@ -1028,16 +1028,16 @@ radar_visualization({
       {
         quadrant: 1,
         ring: 1,
-        label: "Wordpress",
-        bubble: "Wordpress",
+        label: "WordPress",
+        bubble: "WordPress",
         active: false,
         moved: 0
       },
       {
         quadrant: 1,
         ring: 1,
-        label: "Thingworx",
-        bubble: "Thingworx",
+        label: "ThingWorx",
+        bubble: "ThingWorx",
         active: false,
         moved: 0
       },
@@ -1052,8 +1052,8 @@ radar_visualization({
       {
         quadrant: 1,
         ring: 1,
-        label: "Sharepoint",
-        bubble: "Sharepoint",
+        label: "SharePoint",
+        bubble: "SharePoint",
         active: false,
         moved: 0
       },
