Fixed arrows in last update

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ radar_visualization({
         label: "Redux",
         bubble: "Redux",
         active: false,
-        moved: -1
+        moved: 0
       },
       {
         quadrant: 2,
@@ -213,7 +213,7 @@ radar_visualization({
         label: "MobX",
         bubble: "MobX",
         active: false,
-        moved: 1
+        moved: 0
       },
       {
         quadrant: 2,
@@ -277,7 +277,7 @@ radar_visualization({
         label: "C++",
         bubble: "C++",
         active: false,
-        moved: 1
+        moved: 0
       },
       {
         quadrant: 2,
@@ -285,7 +285,7 @@ radar_visualization({
         label: "VB",
         bubble: "VB",
         active: false,
-        moved: 1
+        moved: 0
       },
       //DevOps & Tools
       {
@@ -315,10 +315,10 @@ radar_visualization({
       {
         quadrant: 3,
         ring: 1,
-        label: "Nexus 3",
-        bubble: "Nexus 3",
+        label: "Nexus",
+        bubble: "Nexus",
         active: false,
-        moved: -1
+        moved: 0
       },
       {
         quadrant: 3,
@@ -422,7 +422,7 @@ radar_visualization({
         label: "TFS",
         bubble: "TFS",
         active: false,
-        moved: -1
+        moved: 0
       },
       {
         quadrant: 3,
@@ -478,7 +478,7 @@ radar_visualization({
         label: "SoapUI",
         bubble: "SoapUI",
         active: false,
-        moved: 0
+        moved: 1
       },
       {
         quadrant: 3,
@@ -526,7 +526,7 @@ radar_visualization({
         label: "Capistrano",
         bubble: "Capistrano",
         active: false,
-        moved: -1
+        moved: 0
       },
       {
         quadrant: 3,
@@ -534,7 +534,7 @@ radar_visualization({
         label: "Bamboo",
         bubble: "Bamboo",
         active: false,
-        moved: 0
+        moved: -1
       },
       {
         quadrant: 3,
@@ -550,7 +550,7 @@ radar_visualization({
         label: "New Relic",
         bubble: "New Relic",
         active: false,
-        moved: 1
+        moved: 0
       },
       {
         quadrant: 3,
@@ -558,7 +558,7 @@ radar_visualization({
         label: "Postman",
         bubble: "Postman",
         active: false,
-        moved: 1
+        moved: 0
       },
       {
         quadrant: 3,
@@ -566,7 +566,7 @@ radar_visualization({
         label: "Crucible",
         bubble: "Crucible",
         active: false,
-        moved: 1
+        moved: 0
       },
       {
         quadrant: 3,
@@ -590,7 +590,7 @@ radar_visualization({
         label: "Consul",
         bubble: "Consul",
         active: false,
-        moved: 1
+        moved: 0
       },
       //Integration, API & DB
       {
@@ -846,7 +846,7 @@ radar_visualization({
         label: "Mulesoft Anypoint/CE",
         bubble: "Mulesoft Anypoint/CE",
         active: false,
-        moved: -1
+        moved: 0
       },
       {
         quadrant: 0,
@@ -879,7 +879,7 @@ radar_visualization({
         label: "SAS",
         bubble: "SAS Analytics Product Family",
         active: false,
-        moved: 1
+        moved: 0
       },
       {
         quadrant: 1,
@@ -1143,7 +1143,7 @@ radar_visualization({
         label: "SAP Crystal Reports",
         bubble: "SAP Crystal Reports",
         active: false,
-        moved: -1
+        moved: 0
       },
       {
         quadrant: 1,
@@ -1167,7 +1167,7 @@ radar_visualization({
         label: "Joomla",
         bubble: "Joomla CMS",
         active: false,
-        moved: 0
+        moved: 1
       },
   ]
   //ENTRIES
