Changes from meeting with Analytics DG

--- a/index.html
+++ b/index.html
@@ -201,11 +201,11 @@ radar_visualization({
       },
       {
         quadrant: 2,
-        ring: 1,
+        ring: 0,
         label: "Python",
         bubble: "Python",
         active: false,
-        moved: 0
+        moved: 1
       },
       {
         quadrant: 2,
@@ -233,19 +233,19 @@ radar_visualization({
       },
       {
         quadrant: 2,
-        ring: 2,
+        ring: 1,
         label: "R",
         bubble: "R",
         active: false,
-        moved: 0
+        moved: 1
       },
       {
         quadrant: 2,
-        ring: 2,
+        ring: 1,
         label: "Spark",
         bubble: "Spark",
         active: false,
-        moved: 0
+        moved: 1
       },
       {
         quadrant: 2,
@@ -1012,6 +1012,14 @@ radar_visualization({
       {
         quadrant: 1,
         ring: 1,
+        label: "Tableau",
+        bubble: "Tableau",
+        active: false,
+        moved: 1
+      },
+      {
+        quadrant: 1,
+        ring: 1,
         label: "Drupal 8",
         bubble: "Drupal 8",
         active: false,
@@ -1088,6 +1096,22 @@ radar_visualization({
         bubble: "Contentful",
         active: false,
         moved: 0
+      },
+      {
+        quadrant: 1,
+        ring: 2,
+        label: "Snowflake",
+        bubble: "Snowflake Analytics Platform",
+        active: false,
+        moved: 1
+      },
+      {
+        quadrant: 1,
+        ring: 2,
+        label: "Pentaho",
+        bubble: "Hitachi Pentaho Business Analytics Platform",
+        active: false,
+        moved: 1
       },
       {
         quadrant: 1,
