Added AI and Machine learning stuff

--- a/index.html
+++ b/index.html
@@ -226,6 +226,30 @@ radar_visualization({
       {
         quadrant: 2,
         ring: 2,
+        label: "Keras.io",
+        bubble: "Keras Deep Learning Framework",
+        active: false,
+        moved: 1
+      },
+      {
+        quadrant: 2,
+        ring: 2,
+        label: "xgboost",
+        bubble: "Machine Learning Framework",
+        active: false,
+        moved: 1
+      },
+      {
+        quadrant: 2,
+        ring: 2,
+        label: "vowpal_wabbit",
+        bubble: "Machine Learning Framework",
+        active: false,
+        moved: 1
+      },
+      {
+        quadrant: 2,
+        ring: 2,
         label: "Vue.js",
         bubble: "Vue.js",
         active: false,
@@ -1118,6 +1142,14 @@ radar_visualization({
         ring: 2,
         label: "Mapbox",
         bubble: "Mapbox",
+        active: false,
+        moved: 1
+      },
+      {
+        quadrant: 1,
+        ring: 2,
+        label: "h2o.ai",
+        bubble: "Data Science and Machine Learning Platform",
         active: false,
         moved: 1
       },
