--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html>
+1<html>
 
 <head>
 <meta http-equiv="Content-type" content="text/html; charset=utf-8">
@@ -45,7 +45,7 @@ radar_visualization({
     grid: "#bbb",
     inactive: "#ddd"
   },
-  title: "Digia Tech Radar Q3/2018",
+  title: "Digia Tech Radar Q1/2019",
   quadrants: [
     { name: "Integration & API" },
     { name: "Products, Platforms & Cloud" },
